Closed
Bug 1132034
Opened 6 years ago
Closed 6 years ago
youtube html5 audio/video syncing issue
Categories
(Core :: Audio/Video, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla38
Tracking | Status | |
---|---|---|
firefox35 | --- | unaffected |
firefox36 | - | unaffected |
firefox37 | + | verified |
firefox38 | + | verified |
People
(Reporter: crimsonspecter91, Assigned: padenot)
References
(Blocks 1 open bug, )
Details
(Keywords: regression)
Attachments
(2 files)
2.17 MB,
application/zip
|
Details | |
1.38 KB,
patch
|
kinetik
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:37.0) Gecko/20100101 Firefox/37.0 Build ID: 20150211004833 Steps to reproduce: On a fresh profile play any youtube video more than a minute long (preferably one with strong audio/video cues) using the html5 player. Quality does not seem to matter. Be sure to have all media source extension options enabled (https://www.youtube.com/html5 should show that everything is supported). Actual results: After about 30sec to a minute audio and video are clearly out of sync. Seeking fixes temporarily effectively resetting de-syncing process but not eliminating it. Expected results: Normal video/audio playback.
This started happening a day or so ago (1 or 2 updates ago). I would use stable or beta but they are much worse with html5.
Comment 2•6 years ago
|
||
bug 1128610 and bug 1130695 are looking similar
Component: Untriaged → Video/Audio
Product: Firefox → Core
Comment 3•6 years ago
|
||
Reporter: Can you please paste the graphics information from about:support into this bug? Thanks.
Flags: needinfo?(crimsonspecter91)
Graphics Adapter Description NVIDIA GeForce GTX 560M Adapter Drivers nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um Adapter RAM 1536 ClearType Parameters D [ Gamma: 2200 Pixel Structure: B ClearType Level: 0 Enhanced Contrast: 400 ] D [ Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 0 ] Device ID 0x1251 Direct2D Enabled true DirectWrite Enabled true (6.2.9200.16571) Driver Date 2-5-2015 Driver Version 9.18.13.4752 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 (OMTC) Subsys ID 10a91462 Vendor ID 0x10de WebGL Renderer Google Inc. -- ANGLE (NVIDIA GeForce GTX 560M Direct3D11 vs_5_0 ps_5_0) windowLayerManagerRemote true AzureCanvasBackend direct2d 1.1 AzureContentBackend direct2d 1.1 AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0
Flags: needinfo?(crimsonspecter91)
Comment 5•6 years ago
|
||
I can confirm on build id 20150211030228 on Windows 8.1 Update 1 GPU is AMD Radeon R9 200 Series is that makes a difference. Also just started happening in the last few days on nightly build.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 6•6 years ago
|
||
Same problem, windows 8.1 nvidia geforce gtx 970, latest drivers. Firefox 37.0a2 2015-02-11
Updated•6 years ago
|
Keywords: regression
Comment 8•6 years ago
|
||
Can confirm this. Windows 8.1 64x, Geforce 760 (latest driver), AMD FX-8350, Firefox DE 37.0a2 (2015-02-13).
Confirmed by a sync test: https://www.youtube.com/watch?v=lsHyVB4DVEQ It slowly drifts about of sync after about 4 minutes. Windows 7 64-bit, Intel i3-4130, AMD Radeon R7 265, Catalyst 14.12, Firefox Nightly 38.0a1 (2015-02-13)
Comment 10•6 years ago
|
||
It also seems to regain sync when I pause and then play the video again.
Comment 11•6 years ago
|
||
I have the same problem after updating to FF 36 b6. The audio and video will go out of sync after 5 minutes. I also tried 36b9 and it had the same problem. I'm back on 36b4 and it is working ok. Mind that I have just made a fresh install on windows.
Keywords: regressionwindow-wanted
Comment 12•6 years ago
|
||
I think bug 1126465 could be cause here. I can't reproduce the bug with https://hg.mozilla.org/releases/mozilla-beta/rev/4a36fd52ab9f (36.0b5)
Comment 13•6 years ago
|
||
(In reply to Johan C from comment #12) > I think bug 1126465 could be cause here. the cause*
Blocks: 1126465
Comment 14•6 years ago
|
||
I do suffer from this bug too, since at least two weeks. specs: Firefox Nightly 38.0a1 (2015-02-15) intel i7 4700mq + gt740m (with intel optimus technology) + 6gb ram I don't really now what to put there, so please ask for more informations, and I will provide.
Comment 15•6 years ago
|
||
Thanks for the awesome bug report! I can't reproduce it on my machine (osx). Can somebody who can reproduce it set the following environmental variables: MEDIA_LOG_SAMPLES=1 NSPR_LOG_MODULES="MediaDecoder:5,MediaSource:5,MediaPromise:5,MP4Demuxer:5" And then attach the resulting log?
Updated•6 years ago
|
Priority: -- → P1
Comment 16•6 years ago
|
||
Actually, I can reproduce it on a Windows 7 VM. I'll investigate.
Assignee: nobody → bobbyholley
Comment 17•6 years ago
|
||
Tracking all MSE P1 bugs for Firefox 37.
Comment 21•6 years ago
|
||
Is Firefox Beta 36 also affected? As I see that patches from bug #1126465 Comment 40 landed there and also user reported it in duplicate bug #1128610, that this version is affected.
Severity: normal → major
status-firefox36:
--- → ?
Comment 22•6 years ago
|
||
(In reply to Virtual_ManPL [:Virtual] from comment #21) > Is Firefox Beta 36 also affected? > As I see that patches from bug #1126465 Comment 40 landed there and also > user reported it in duplicate bug #1128610, that this version is affected. Yep, I could reproduce it in 36.0b6 (see comment 12).
Comment 23•6 years ago
|
||
[Tracking Requested - why for this release]: Regression & per Comment 17
Status: NEW → ASSIGNED
status-firefox35:
--- → unaffected
tracking-firefox36:
--- → ?
tracking-firefox38:
--- → ?
Version: 37 Branch → 36 Branch
Comment 24•6 years ago
|
||
Hm, I actually wonder if I'm reproducing the same bug. I see the a consistent offset (with the beep at around 15 o'clock), and no drift. I also see this behavior all the way back to b1. If someone can reproduce this, here are some things that would be useful: * Capturing the log mentioned in comment 15. See also https://wiki.mozilla.org/MailNews:Logging#Windows for instructions on NSPR logging on windows. * Using mozregression [1] to identify when this regression on Nightly. Johan, are you able to do either of those things? [1] http://mozilla.github.io/mozregression/
Flags: needinfo?(johan.charlez)
Comment 25•6 years ago
|
||
(In reply to Bobby Holley (Busy with media, don't ask for DOM/JS/XPConnect things) from Sure, here's the log to start with. I had to zip it, the log-file is too large to upload to bugzilla. Anatomy (of sorts) of the log: 1. Loaded video. 2. Ad played (10 seconds-ish) (unskippable). 3. Video started. 4. Skipped forward. 5. Video played for a couple of minutes. --- Regression window incoming.
Flags: needinfo?(johan.charlez)
![]() |
||
Comment 26•6 years ago
|
||
I have a different regression range from Comment 12 I can reproduce with https://www.youtube.com/watch?v=IhRG6jXgFBI (see Post http://forums.mozillazine.org/viewtopic.php?p=14028281#p14028281 ) Steps 1. Open https://www.youtube.com/watch?v=IhRG6jXgFBI 2. Playback for 10min Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=f82c3ca3b6c8&tochange=ad9e5849856d Regressed by: Bug 1127213 and Bug 1125804
![]() |
||
Updated•6 years ago
|
Comment 28•6 years ago
|
||
(In reply to Alice0775 White from comment #26) > Regressed by: Bug 1127213 and Bug 1125804 This makes much more sense. I was thinking this over on a walk before comment 26 was posted, and came to the conclusion that it must be an issue with the audio clock.
Comment 29•6 years ago
|
||
Reassigning to padenot. Please be aware that this is P1 for MSE.
Assignee: bobbyholley → padenot
Comment 30•6 years ago
|
||
(In reply to Alice0775 White from comment #26) > I have a different regression range from Comment 12 > > I can reproduce with https://www.youtube.com/watch?v=IhRG6jXgFBI (see Post > http://forums.mozillazine.org/viewtopic.php?p=14028281#p14028281 ) > Steps > 1. Open https://www.youtube.com/watch?v=IhRG6jXgFBI > 2. Playback for 10min > > Pushlog: > https://hg.mozilla.org/integration/mozilla-inbound/ > pushloghtml?fromchange=f82c3ca3b6c8&tochange=ad9e5849856d > > Regressed by: Bug 1127213 and Bug 1125804 Interesting, thanks Alice. (In reply to Bobby Holley (Busy with media, don't ask for DOM/JS/XPConnect things) from comment #28) > (In reply to Alice0775 White from comment #26) > > Regressed by: Bug 1127213 and Bug 1125804 > > This makes much more sense. I was thinking this over on a walk before > comment 26 was posted, and came to the conclusion that it must be an issue > with the audio clock. Sorry for confusing the issue :( Hopefully the log is of use.
Comment 31•6 years ago
|
||
(In reply to Johan C from comment #30) > Sorry for confusing the issue :( > Hopefully the log is of use. No worries - thanks for the help! This is padenot's territory, so he can take a look at the log and let you know if he needs anything else. :-)
Comment 32•6 years ago
|
||
(In reply to Bobby Holley (Busy with media, don't ask for DOM/JS/XPConnect things) from comment #31) > (In reply to Johan C from comment #30) > > Sorry for confusing the issue :( > > Hopefully the log is of use. > > No worries - thanks for the help! This is padenot's territory, so he can > take a look at the log and let you know if he needs anything else. :-) Heh, help. :| Anything you need padenot. Considering Alice's findings, this probably shouldn't "block" bug 1126465 any longer.
No longer blocks: 1126465
![]() |
||
Updated•6 years ago
|
Assignee | ||
Comment 33•6 years ago
|
||
I could repro locally on Windows 7 / Nightly, and this fixes it. The issue was that casts to integers always round down, so it was slowly drifting. I checked using the sync test video at https://www.youtube.com/watch?v=szoOsG9137U, it's quite obvious after 3-4 minutes of playback. Of course seeking "fixes" the sync, because that ditches the current AudioStream, which uses a different cubeb_stream, etc.
Flags: needinfo?(padenot)
Attachment #8565922 -
Flags: review?(kinetik)
Comment 34•6 years ago
|
||
Can reproduce this in FF v38 nightly, Windows 7 64bit. Graphics : ATI Mobility Radeon HD 5650 Experienced here : https://www.youtube.com/watch?v=CqmeerfZp4E
Updated•6 years ago
|
Attachment #8565922 -
Flags: review?(kinetik) → review+
Comment 36•6 years ago
|
||
Paul, Bobby, is that a critical issue for 36?
Flags: needinfo?(padenot)
Flags: needinfo?(bobbyholley)
Comment 37•6 years ago
|
||
My vote is on critical issue since youtube is a widely used service and seeing videos slow get out of sync is discomforting
Assignee | ||
Comment 38•6 years ago
|
||
(In reply to Sylvestre Ledru [:sylvestre] from comment #36) > Paul, Bobby, is that a critical issue for 36? Jesper, Sylvestre, we have backed out the patch set that introduced this nasty regression from 36, so it's unnecessary to track this for beta. This patch set has now been stabilized, and is going to re-land on Nightlies, and possibly get uplifted to 37 once we are sure there are no regression (after a couple nightlies, something like that), as it's needed for initial MSE rollout. (Also clearing the needinfo for Bobby)
Flags: needinfo?(padenot)
Flags: needinfo?(bobbyholley)
Updated•6 years ago
|
Comment 39•6 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/99f5101d6cf1
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Comment 40•6 years ago
|
||
(In reply to Paul Adenot (:padenot) from comment #38) > Jesper, Sylvestre, we have backed out the patch set that introduced this > nasty regression from 36, so it's unnecessary to track this for beta. This > patch set has now been stabilized, and is going to re-land on Nightlies, and > possibly get uplifted to 37 once we are sure there are no regression (after > a couple nightlies, something like that), as it's needed for initial MSE > rollout. Seems like a good plan to me. As this is an MSE P1 bug, it is preferable to land this before the merge to Beta on Mon, Feb 23, so that the fix can be included in Beta 1. Uplifting on Sunday should give us a couple of days coverage on m-c. Can you submit an Aurora approval request to get this into 37 after we've verified that there are no regressions?
Flags: needinfo?(padenot)
Assignee | ||
Comment 41•6 years ago
|
||
Lawrence, I just checked, and the needed patches are actually already on Aurora, so I think we're good.
Flags: needinfo?(padenot)
Reporter | ||
Comment 42•6 years ago
|
||
I can confirm as of 2015-02-23 (most recent update date) that this seems to be fixed in firefox 37.
Comment 43•6 years ago
|
||
(In reply to Paul Adenot (:padenot) from comment #41) > Lawrence, I just checked, and the needed patches are actually already on > Aurora, so I think we're good. Based on when you commented, you may have checked after the merge of 38 to Aurora. However... (In reply to Wroth from comment #42) > I can confirm as of 2015-02-23 (most recent update date) that this seems to > be fixed in firefox 37. I'm marking 37 as fixed based on this feedback.
Updated•6 years ago
|
Flags: qe-verify+
Comment 44•6 years ago
|
||
Reproduced on Nightly 2015-02-11 with https://www.youtube.com/watch?v=IhRG6jXgFBI video - after 4 minutes, video and audio are no longer synced. Verified as fixed on Fx 37 beta 4 (Build ID: 20150309191715) and latest DevEd 38.0a2 (Build ID: 20150309004203) under Windows 7 64-bit.
Status: RESOLVED → VERIFIED
QA Contact: alexandra.lucinet
Comment 45•6 years ago
|
||
Syncing issues are still present in current release 38.0.1 (Windows 7 64-bit). Regression?
Comment 46•6 years ago
|
||
I am also still seeing this with 38.0.1: Adapter Description NVIDIA GeForce GT 640 Adapter Drivers nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um Adapter RAM 2048 ClearType Parameters D [ Gamma: 3600 Pixel Structure: R ] D [ Gamma: 2200 Pixel Structure: R ] D [ Gamma: 2200 Pixel Structure: R ] D [ Gamma: 2200 Pixel Structure: R ] Device ID 0x0fc0 Direct2D Enabled true DirectWrite Enabled true (6.3.9600.17795) Driver Date 8-29-2013 Driver Version 9.18.13.2702 GPU #2 Active false GPU Accelerated Windows 1/1 Direct3D 11 (OMTC) Subsys ID 3b861642 Vendor ID 0x10de WebGL Renderer Google Inc. -- ANGLE (NVIDIA GeForce GT 640 Direct3D11 vs_5_0 ps_5_0) windowLayerManagerRemote true AzureCanvasBackend direct2d 1.1 AzureContentBackend direct2d 1.1 AzureFallbackCanvasBackend cairo AzureSkiaAccelerated 0 (#0) Error [D2D1.1] 4CreateBitmap failure Size(64,16400) Code: 0x80070057
Comment 47•6 years ago
|
||
This still happens to me on 38.0.05 (Windows 7 64-bit, GTX 580).
Comment 48•6 years ago
|
||
(In reply to joonoro from comment #47) > This still happens to me on 38.0.05 (Windows 7 64-bit, GTX 580). I mean 38.0.5
Updated•6 years ago
|
Flags: qe-verify+ → qe-verify-
Comment 49•6 years ago
|
||
Firefox 38.0.5 (20150525141253) Windows 7 / x64 This issue has unfortunately not been resolved since it was introduced some months ago. - Tested Firefox in safe mode with the referenced video [1] at quality 144p (selected by YouTube). - Noticed audio had drifted about 6 minutes - No dropped frames (Stats for nerds) [1] https://www.youtube.com/watch?v=kur9zAMOkKc
Comment 50•6 years ago
|
||
Paul, any thoughts on the comments above? The issue no longer reproduced for us, but other users are apparently still seeing it.
Flags: needinfo?(padenot)
Comment 51•6 years ago
|
||
I see there's a related bugzilla report on this issue: https://bugzilla.mozilla.org/show_bug.cgi?id=1164966
Comment 52•6 years ago
|
||
Same result here with Firefox 38.0.5 with Win 7 x64.
Assignee | ||
Comment 53•6 years ago
|
||
This is being worked on. It just takes some time.
Flags: needinfo?(padenot)
Comment 54•6 years ago
|
||
I'm having the same issues with Firefox 38 on Windows 7 Professional with HTML5. Not with Flash.
Comment 55•6 years ago
|
||
(In reply to Paul Adenot (:padenot) from comment #53) > This is being worked on. It just takes some time. Is there a separate bug where the work is being tracked? Or will this bug be reopened?
Flags: needinfo?(padenot)
Assignee | ||
Comment 56•6 years ago
|
||
There is another set of bugs, I think kinetik's plan is to change slightly how we do things, but I don't know the bug number.
Flags: needinfo?(padenot)
Comment 57•6 years ago
|
||
Having this issue on multiple machines. Both W7 x64 latest release.
Comment 58•6 years ago
|
||
I run a recording studio and produce live studio concerts which I record with digital multitrack audio and 6-camera HD video. I edit in Premiere CC 2014 and render to 1280 x 720 MP4. I never had any A/V sync problems while viewing on YouTube with their flash-based player using Firefox on our Win 7 32-bit system and our Win 7 Pro 64-bit system. But ever since YouTube has implemented their HTML5 player, the audio lags behind the video right from the beginning and stays that way for the entire video (these song videos are usually between 4-5 minutes). When I view the same YouTube videos using Chrome, the audio and video are in perfect sync. This problem occurs on both of the above systems.
Comment 59•6 years ago
|
||
(In reply to Randy Tobin from comment #58) > I run a recording studio and produce live studio concerts which I record > with digital multitrack audio and 6-camera HD video. I edit in Premiere CC > 2014 and render to 1280 x 720 MP4. I never had any A/V sync problems while > viewing on YouTube with their flash-based player using Firefox on our Win 7 > 32-bit system and our Win 7 Pro 64-bit system. But ever since YouTube has > implemented their HTML5 player, the audio lags behind the video right from > the beginning and stays that way for the entire video (these song videos are > usually between 4-5 minutes). When I view the same YouTube videos using > Chrome, the audio and video are in perfect sync. This problem occurs on both > of the above systems. Bug 1136360 fixes this.
Comment 60•6 years ago
|
||
Matthew, thanks for the tip but I d/l'd the latest Nightly build which addressed this issue and although it's certainly better than it was, it's still about 50ms off (audio behind video). This problem does not exist in Chrome (but other problems do exist with Chrome so I avoid using it except for testing). Here's a link to a page on our web site where you can see/hear what I'm talking about: http://thetasound.com/theta-sound-studio-live-11-march-21-2015/ Ideally, since this kind of issue is a moving target on systems with different video cards and sound engines, Firefox should have a user-adjustable setting that delays the video in relation to the audio (or vice versa for instances where that may be the case). That would do the trick!
Comment 61•6 years ago
|
||
(In reply to Randy Tobin from comment #60) > Matthew, thanks for the tip but I d/l'd the latest Nightly build which > addressed this issue and although it's certainly better than it was, it's > still about 50ms off (audio behind video). This problem does not exist in > Chrome (but other problems do exist with Chrome so I avoid using it except > for testing). Here's a link to a page on our web site where you can see/hear > what I'm talking about: > http://thetasound.com/theta-sound-studio-live-11-march-21-2015/ > Ideally, since this kind of issue is a moving target on systems with > different video cards and sound engines, Firefox should have a > user-adjustable setting that delays the video in relation to the audio (or > vice versa for instances where that may be the case). That would do the > trick! The fix Matthew pointed out in comment #59 above was backed out. So... until https://bugzilla.mozilla.org/show_bug.cgi?id=1136360 re-lands you won't know for sure if its fixed on your end/test-case just yet.
You need to log in
before you can comment on or make changes to this bug.
Description
•