Bug 1132034 - Properly round the number of frame for the accumulating clock in WASAPI. r=kinetik